# uv-todo-fastapi

./: .editorconfig  .gitignore  README.md  pyproject.toml
data/: todos.csv
src/: create_todo.py  delete_todo.py  main.py  read_todos.py  update_todo.py
tests/: README.md  test_todo_app.py
